[gd_scene load_steps=13 format=3 uid="uid://co5plf8mt2t47"]

[ext_resource type="Script" path="res://src/shared/scripts/player.gd" id="1_phhq7"]
[ext_resource type="PackedScene" uid="uid://crk4lfpy8252t" path="res://src/shared/scenes/character_model.tscn" id="2_oiqxx"]
[ext_resource type="Script" path="res://src/shared/scripts/GunController.gd" id="3_hijvb"]
[ext_resource type="PackedScene" uid="uid://ddwv4x0r6b241" path="res://src/shared/scenes/gun.tscn" id="4_x7yjf"]
[ext_resource type="PackedScene" uid="uid://57v1vgvwcwm8" path="res://src/shared/scenes/sword.tscn" id="5_4qddd"]
[ext_resource type="PackedScene" uid="uid://bs76rm217pjkt" path="res://src/shared/scenes/dodge.tscn" id="6_nuy2c"]
[ext_resource type="Script" path="res://src/shared/scripts/CameraController.gd" id="7_sunp5"]
[ext_resource type="Script" path="res://src/shared/scripts/PlayerInput.gd" id="8_jj5ub"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3oy5u"]
radius = 0.3
height = 1.8

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_sx2no"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pi10v"]
properties/0/path = NodePath("PlayerInput:direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("PlayerInput:jump_input")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("PlayerInput:run_input")
properties/2/spawn = true
properties/2/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wjk8y"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:color")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:name_label_text")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:is_on_floor_")
properties/4/spawn = true
properties/4/replication_mode = 2

[node name="Player" type="CharacterBody3D" groups=["players"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_phhq7")

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000263751, 2.07069, -0.00156093)
billboard = 1
text = "Player"
font_size = 50
outline_size = 10

[node name="Hurtbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_3oy5u")

[node name="RotationRoot" type="Node3D" parent="."]

[node name="CharacterModel" parent="RotationRoot" instance=ExtResource("2_oiqxx")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Hand" type="Marker3D" parent="RotationRoot"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0.339128, 1.0381, -0.556032)

[node name="GunController" type="Node" parent="."]
script = ExtResource("3_hijvb")
weapons = Array[PackedScene]([ExtResource("4_x7yjf"), ExtResource("5_4qddd")])

[node name="Dodge" parent="." instance=ExtResource("6_nuy2c")]

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("7_sunp5")
tilt_upper_limit = 0.8
tilt_lower_limit = -0.8

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.30978, 2.93222)

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/Camera3D"]
target_position = Vector3(0, 0, -100)
collision_mask = 7

[node name="CameraOverShoulderPivot" type="Marker3D" parent="CameraController"]

[node name="CameraArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 1.5, 2, 2)
margin = 0.2

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.602583, 0.011374, -0.783995)

[node name="CameraSynchronizer" type="MultiplayerSynchronizer" parent="CameraController"]
replication_config = SubResource("SceneReplicationConfig_sx2no")

[node name="PlayerInput" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pi10v")
script = ExtResource("8_jj5ub")

[node name="DataSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_wjk8y")
